--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <p>Hello world!</p>
+    <div id="main">
+      <h1 id="title">DR. Norman Borlaug</h1>
+      <p>The man who saved a billion lives</p>
+      <div id="img-div">
+        <figure>
+          <img id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="">
+          <br/>
+          <figcaption id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</figcaption>
+        </figure>
+      </div>
+    </div>
     <script  src="js/index.js"></script>
   </body>
 </html>
