--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           </p>
         </div>
       </div>
+      <p id="link">If you have time, you should read more about this incredible human being on his  <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.</p>
     </div>
     <script  src="js/index.js"></script>
   </body>
