Updated the list design

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
           </ul>
 
         </fieldset>
-
+        <div id="quote">
+          <p><i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i>
+          </p>
+          <p>
+            -- Indian Prime Minister Manmohan Singh
+          </p>
+        </div>
       </div>
     </div>
     <script  src="js/index.js"></script>
